# sql-data-engineer-env

./: Dockerfile  README.md  __init__.py  client.py  env.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  tmp_env.db
server/: __init__.py  app.py  models.py  tasks.py
sql_data_engineer_env.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
