[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sql-data-engineer-env"
version = "0.1.0"
description = "A real-world SQL data engineering environment for agent evaluation."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openenv-core",
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "pandas"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["server*"]

[project.scripts]
server = "server.app:main"